# trybotster

./: .botster_copy  .botster_init  .botster_prompt  .botster_server  .botster_teardown  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Dockerfile  Gemfile  NOTICES  Procfile.dev  README.md  TEST_COVERAGE_SUMMARY.md  TEST_PR_CREATION.md  docker-compose.dev.yml  install.sh  mcp.ru  mise.toml.example  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
botster_hub/: Cargo.toml  TUI_ARCHITECTURE.md  botster_prompt.md
botster_hub/src/: agent.rs  lib.rs  main.rs  main_old.rs  prompt.rs  terminal.rs
botster_hub/src/components/: terminal_view.rs
botster_hub/tests/: worktree_integration_test.rs
cli/: ARCHITECTURE_REVIEW.md  CHANGES.md  Cargo.toml  MIGRATION_STATUS.md  PUSH_MIGRATION.md  QUICK_REFERENCE.md  REFACTOR_PROGRESS.md  TESTING.md  TESTING_QUICK_REF.md  TUI_ARCHITECTURE.md  botster_prompt.md  build.rs  test.sh
cli/.cargo/: config.toml
cli/assets/: xterm-ghostty.terminfo
cli/docs/: CLIENT_REFACTOR_DESIGN.md  HOT_PATH_AUDIT.md  ORCHESTRATOR_HANDOFF.md  PHASE5_MIGRATION_PLAN.md  REFACTOR_VERIFICATION_SPEC.md  async-clients-plan.md  webrtc-protocol.md
cli/docs/refactoring/: cli-refactor-plan-2026-01-06.md
cli/lua/core/: hooks.lua  init.lua  loader.lua  state.lua
cli/lua/handlers/: agents.lua  broker.lua  commands.lua  connections.lua  filesystem.lua  github.lua  hub_commands.lua  module_watcher.lua  plugin_watcher.lua  session_recovery.lua  socket.lua  templates.lua  tui.lua  webrtc.lua
cli/lua/hub/: builtin_surfaces.lua  hooks.lua  init.lua  loader.lua  mcp_defaults.lua  reference.lua
cli/lua/lib/: accessory.lua  action.lua  agent.lua  agent_list_payload.lua  client.lua  client_session_payload.lua  commands.lua  config_resolver.lua  entity_broadcast.lua  hosted_preview.lua  hub.lua  layout_broadcast.lua  layout_input.lua  mcp.lua  plugin_db.lua  pty_clients.lua  session.lua  session_close_policy.lua  surfaces.lua  target_context.lua  tree_snapshot.lua  workspace_store.lua  worktree_list_payload.lua
cli/lua/plugins/hello_surface/: plugin.lua
cli/lua/ui/: actions.lua  botster.lua  events.lua  keybindings.lua  layout.lua  mouse.lua  workspace_helpers.lua
cli/lua/web/: layout.lua  workspace_view_model.lua
cli/src/: agent.rs  auth.rs  browser_connect.rs  compat.rs  config.rs  constants.rs  crypto.rs  device.rs  embedded_tailscale.rs  env.rs  file_watcher.rs  ghostty_vt.rs  git.rs  hosted_preview.rs  keyring.rs  lib.rs  main.rs  mcp_gateway.rs  mcp_serve.rs  notifications.rs  process.rs  prompt.rs  render.rs  shutdown.rs  spawn_targets.rs  tailscale.rs  terminal.rs  terminal_relay.rs  terminal_widget.rs  terminfo.rs  tunnel.rs  webrtc_handler.rs  ws.rs
cli/src/agent/: message_delivery.rs  mod.rs  notification.rs  screen.rs  scroll.rs  spawn.rs
cli/src/agent/pty/: cli.rs  commands.rs  connected_client.rs  events.rs  mod.rs  server.rs
cli/src/agents/: mod.rs  spawn.rs
cli/src/app/: input.rs  mod.rs  state.rs  ui.rs
cli/src/broker/: connection.rs  integration_test_full.rs  mod.rs  protocol.rs  ring_buffer.rs
cli/src/channel/: action_cable.rs  compression.rs  mod.rs  reliable.rs  webrtc.rs
cli/src/client/: browser.rs  http_channel.rs  mod.rs  registry.rs  tui.rs  types.rs
cli/src/commands/: context.rs  json.rs  mod.rs  prompt.rs  reset.rs  update.rs  worktree.rs
cli/src/hub/: action_cable_connection.rs  actions.rs  agent_handle.rs  client_routing.rs  command_channel.rs  commands.rs  daemon.rs  events.rs  handle_cache.rs  hub_handle.rs  lifecycle.rs  menu.rs  mod.rs  polling.rs  registration.rs  run.rs  server_comms.rs  state.rs  terminal_profile.rs  workers.rs
cli/src/hub/actions/: agent_handlers.rs  client_handlers.rs  connection_handlers.rs  input_handlers.rs  menu_handlers.rs  mod.rs  tests.rs
cli/src/lua/: embedded.rs  file_watcher.rs  mod.rs  runtime.rs
cli/src/lua/primitives/: action_cable.rs  config.rs  connection.rs  events.rs  fs.rs  hook_timeout.rs  http.rs  hub.rs  hub_client.rs  log.rs  (+16 more)
cli/src/notifications/: mod.rs  push.rs  vapid.rs
cli/src/relay/: browser.rs  connection.rs  crypto_service.rs  events.rs  http_proxy.rs  matrix_crypto.rs  mod.rs  olm.rs  olm_crypto.rs  persistence.rs  preview_types.rs  ratchet.rs  signal.rs  signal_stores.rs  state.rs  stream_mux.rs  types.rs
cli/src/server/: client.rs  messages.rs  mod.rs  types.rs
cli/src/session/: connection.rs  mod.rs  protocol.rs  tests.rs
cli/src/socket/: client_conn.rs  framing.rs  mod.rs  server.rs  tui_bridge.rs
cli/src/tui/: actions.rs  events.rs  guard.rs  hot_reload.rs  input.rs  layout.rs  layout_lua.rs  lua_ops.rs  menu.rs  mod.rs  panel_pool.rs  qr.rs  raw_input.rs  render.rs  render_tree.rs  runner.rs  runner_agent.rs  runner_handlers.rs  runner_input.rs  screen.rs  scroll.rs  smooth_scroll.rs  terminal_modes.rs  terminal_panel.rs  view.rs  widget_state.rs
cli/src/ui_contract/: README.md  lua.rs  mod.rs  node.rs  props.rs  tokens.rs  viewport.rs
cli/tests/: auth_integration_test.rs  cli_commands_test.rs  client_session_payload_test.rs  connection_code_error_test.rs  debug_worktree_paths.rs  entity_broadcast_test.rs  environment_variables_test.rs  exact_bug_reproduction.rs  git_worktree_bug_test.rs  hot_reload_broadcaster_test.rs  integration_tests.rs  plugin_db_test.rs  pty_integration_test.rs  session_default_workspace_test.rs  session_update_v2_test.rs  session_update_wire_test.rs  signal_handling_test.rs  signal_protocol_test.rs  signal_stores_test.rs  sqlite_lua_smoke_test.rs  ui_contract_lua_test.rs  ui_contract_tui_adapter_test.rs  ui_contract_web_layout_test.rs  ui_layout_transport_test.rs  ui_surface_registry_test.rs  workspace_store_test.rs  worktree_delete_bug_test.rs  worktree_integration_test.rs  worktree_list_payload_test.rs  worktree_manager_test.rs
cli/tests/fixtures/: test_botster_init.sh  test_botster_server.sh
cli/tmp/test-run/: device.json  device.signing_key  stdout.txt
libsignal-wasm/: Cargo.toml
libsignal-wasm/src/: lib.rs  stores.rs
vodozemac-wasm/: Cargo.toml
vodozemac-wasm/src/: lib.rs
(+906 files in other folders)
