[package]
name = "botster-hub"
version = "0.5.2"
edition = "2021"
authors = ["Jason Conigliari"]
description = "Interactive PTY-based daemon for GitHub mention → local agent automation"

[[bin]]
name = "botster-hub"
path = "src/main.rs"

[dependencies]
# TUI framework
ratatui = "0.30"
crossterm = "0.29"
# Terminal emulation - 0.16+ has working scrollback (fixes scrollback panic)
vt100 = "0.16"

# PTY handling
portable-pty = "0.9"

# Async runtime
tokio = { version = "1.48", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["io"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client (gzip/deflate/brotli for automatic response decompression)
reqwest = { version = "0.12.24", features = ["json", "blocking", "gzip", "deflate", "brotli"] }

# Git operations
git2 = "0.20"
globset = "0.4"

# CLI argument parsing
clap = { version = "4.5.51", features = ["derive"] }

# Error handling & utilities
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
ctrlc = { version = "3.4", features = ["termination"] }
signal-hook = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
bytes = "1.0"
shellexpand = "3.1"
sha2 = "0.10"
semver = "1.0"
hostname = "0.4"

# E2E encryption - compatible with TweetNaCl box API (X25519 + XSalsa20-Poly1305)
crypto_box = "0.9"
rand = "0.8"
base64 = "0.22"

# WebSocket for Action Cable terminal relay
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# QR code generation for browser connection
qrcode = "0.14"

# Clipboard support for copying URLs
arboard = "3.4"

[dev-dependencies]
tempfile = "3.23"
libc = "0.2"
portable-pty = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

