[package]
name = "libsignal-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for Signal Protocol E2E encryption"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Signal Protocol
libsignal-protocol = { git = "https://github.com/signalapp/libsignal", branch = "main", default-features = false }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
# Need both versions with WASM features enabled
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
base64 = "0.22"
thiserror = "2.0"
console_error_panic_hook = "0.1"
uuid = { version = "1.11", features = ["v4", "js"] }
async-trait = "0.1"
rand = "0.9"
anyhow = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
